--- a/testapps/testapp/src/main/res/layout/fragment_acquire.xml
+++ b/testapps/testapp/src/main/res/layout/fragment_acquire.xml
@@ -105,10 +105,10 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/pop_section"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:id="@+id/pop_section">
+            android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -152,20 +152,20 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="7"
-                    android:textSize="12sp"
-                    android:text="@string/pop_default_resource_url"/>
+                    android:text="@string/pop_default_resource_url"
+                    android:textSize="12sp" />
             </LinearLayout>
         </LinearLayout>
 
 
         <LinearLayout
+            android:id="@+id/login_hint_section"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:paddingTop="5dp"
             android:paddingBottom="5dp"
-            android:weightSum="10"
-            android:id="@+id/login_hint_section">
+            android:weightSum="10">
 
             <TextView
                 android:layout_width="0dp"
@@ -405,6 +405,35 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
+            android:background="#CCCCCC"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp"
+            android:weightSum="10"
+            android:baselineAligned="false">
+
+            <TextView
+                android:id="@+id/status"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="top"
+                android:layout_weight="8"
+                android:layout_marginHorizontal="5dp"
+                android:textColor="#333333"/>
+
+            <Button
+                android:id="@+id/btn_statusCopy"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="top"
+                android:layout_weight="2"
+                android:text="Copy" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
             android:paddingTop="5dp"
             android:paddingBottom="5dp"
             android:weightSum="10">
@@ -432,7 +461,6 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
             android:paddingTop="5dp"
             android:paddingBottom="5dp"
             android:weightSum="10">
@@ -492,6 +520,15 @@
             android:paddingTop="5dp"
             android:paddingBottom="5dp"
             android:weightSum="10">
+
+            <Button
+                android:id="@+id/btn_acquiretokenWithDeviceCodeFlow"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_weight="5"
+                android:gravity="center"
+                android:text="AT with Device Code Flow" />
 
             <Button
                 android:id="@+id/btnBrokerHelper"
