Convert to androidX (fixes UI issue)

--- a/package-inspector/src/main/res/menu/options_menu.xml
+++ b/package-inspector/src/main/res/menu/options_menu.xml
@@ -5,5 +5,5 @@
         android:title="Search Pkgs"
         android:icon="@android:drawable/ic_search_category_default"
         app:showAsAction="collapseActionView|ifRoom"
-        app:actionViewClass="android.widget.SearchView" />
+        app:actionViewClass="androidx.appcompat.widget.SearchView" />
 </menu>
