--- a/testapps/testapp/src/main/res/layout/fragment_acquire.xml
+++ b/testapps/testapp/src/main/res/layout/fragment_acquire.xml
@@ -155,6 +155,30 @@
                     android:text="@string/pop_default_resource_url"
                     android:textSize="12sp" />
             </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:paddingTop="5dp"
+                android:paddingBottom="5dp"
+                android:weightSum="10">
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="5dp"
+                    android:gravity="center_vertical"
+                    android:layout_weight="3"
+                    android:text="@string/pop_client_claims" />
+
+                <EditText
+                    android:id="@+id/pop_client_claims"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="7"
+                    android:textSize="12sp" />
+            </LinearLayout>
         </LinearLayout>
 
 
@@ -404,21 +428,21 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
             android:background="#CCCCCC"
+            android:baselineAligned="false"
+            android:orientation="horizontal"
             android:paddingTop="5dp"
             android:paddingBottom="5dp"
-            android:weightSum="10"
-            android:baselineAligned="false">
+            android:weightSum="10">
 
             <TextView
                 android:id="@+id/status"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="top"
-                android:layout_weight="8"
                 android:layout_marginHorizontal="5dp"
-                android:textColor="#333333"/>
+                android:layout_weight="8"
+                android:textColor="#333333" />
 
             <Button
                 android:id="@+id/btn_statusCopy"
