--- a/testapps/testapp/src/main/res/layout/fragment_acquire.xml
+++ b/testapps/testapp/src/main/res/layout/fragment_acquire.xml
@@ -168,8 +168,8 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="5dp"
-                    android:gravity="center_vertical"
                     android:layout_weight="3"
+                    android:gravity="center_vertical"
                     android:text="@string/pop_client_claims" />
 
                 <EditText
@@ -564,5 +564,24 @@
                 android:text="Broker Helper" />
 
         </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp">
+
+            <Button
+                android:id="@+id/btn_generate_shr"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_weight="5"
+                android:gravity="center"
+                android:text="Generate SHR (sans AT)" />
+
+        </LinearLayout>
+
     </LinearLayout>
 </ScrollView>
