--- a/testapps/testapp/src/main/res/menu/activity_main_drawer.xml
+++ b/testapps/testapp/src/main/res/menu/activity_main_drawer.xml
@@ -28,6 +28,9 @@
 
     <group android:checkableBehavior="single">
         <item
+            android:id="@+id/nav_calculator"
+            android:title="Calculator" />
+        <item
             android:id="@+id/nav_acquire"
             android:title="AcquireToken" />
         <item
