--- a/msalautomationapp/src/main/res/xml/network_security_config.xml
+++ b/msalautomationapp/src/main/res/xml/network_security_config.xml
@@ -3,7 +3,7 @@
         <trust-anchors>
             <!-- Trust preinstalled CAs -->
             <certificates src="system" />
-            <!-- Trust user added CAs while debuggable only -->
+            <!-- Trust user added CAs while debuggable only. e.g. Fiddler -->
             <certificates src="user" />
         </trust-anchors>
     </debug-overrides>
